--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -1,6 +1,6 @@
 .home-container {
   padding: 32px;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Crimson Text", serif;
   background-color: #f9f8f6;
   position: relative;
   overflow: hidden;
