--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body{
 
 .App {
   text-align: center;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Crimson Text", serif;
 }
 
 .App-logo {
@@ -56,7 +56,6 @@ body{
     font-size: calc(9px + 1.8vmin);
     padding: 1rem;
   }
-
   .App-logo {
     height: 30vmin;
   }
