--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -2,8 +2,7 @@
 .dashboard-container {
   width: 100%;
   padding: 0 400px ;
-  font-family: 'Segoe UI', sans-serif;
-   
+  font-family: "Crimson Text", serif;
   box-sizing: border-box;
   margin-top: 0;
 }
