--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body{
 
 .App {
   text-align: center;
-  font-family: "Crimson Text", serif;
+  font-family: "Merriweather", serif;
 }
 
 .App-logo {
