--- a/src/pages/styles/header.css
+++ b/src/pages/styles/header.css
@@ -10,7 +10,7 @@
   color: #333;
   text-align: center;
   box-sizing: border-box;
-  
+  font-family: "Merriweather", serif;
 }
 .header h1 {
   font-size: 40px;
